Fix mobile overflow

--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -15,6 +15,7 @@ body {
   font-family: 'Poppins', sans-serif;
   background-color: #f7f7f9;
   color: #172b4d;
+  overflow-x: hidden;
   width: 100%;
 }
 
@@ -183,7 +184,7 @@ body {
 
 .skill_header {
   display: flex;
-  gap: 200px;
+  gap: 35%;
 }
 
 .lan {
@@ -238,21 +239,21 @@ hr {
 }
 
 input[type=text] {
-  width: 300px;
+  width: 95%;
   height: 28px;
   border-radius: 8px;
   border-style: none;
 }
 
 input[type=email] {
-  width: 300px;
+  width: 95%;
   height: 28px;
   border-radius: 8px;
   border-style: none;
 }
 
 textarea {
-  width: 300px;
+  width: 95%;
   height: 100px;
   border-radius: 8px;
   color: #b3bac5;
